--- a/index.html
+++ b/index.html
@@ -3,141 +3,266 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
-<title>MindAR · Test de detección</title>
+<title>Poster AR · Universal</title>
 <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
 <style>
   html,body{margin:0;height:100%;background:#000}
-  video[playsinline]{
-    position:fixed!important;inset:0!important;width:100vw!important;height:100vh!important;
-    object-fit:cover!important;z-index:0!important;background:#000!important
-  }
-  a-scene{position:fixed!important;inset:0!important;z-index:2!important}
-  canvas.a-canvas{position:fixed!important;inset:0!important;z-index:3!important}
-  .ui{position:fixed;left:10px;top:10px;z-index:9;display:flex;gap:8px}
-  .btn{padding:8px 12px;border-radius:8px;border:1px solid #345;background:#0f1522;color:#eaf2ff}
-  .log{position:fixed;right:10px;top:10px;z-index:9;color:#cfe3ff;background:#0f1522cc;border:1px solid #22324d;border-radius:8px;padding:8px 10px;max-width:46ch}
+  video[playsinline]{position:fixed!important;inset:0!important;width:100vw!important;height:100vh!important;object-fit:cover!important;z-index:0!important;background:#000!important}
+  a-scene{position:fixed!important;inset:0!important;z-index:3!important;pointer-events:auto!important}
+  canvas.a-canvas{position:fixed!important;inset:0!important;z-index:4!important;pointer-events:auto!important}
+  .ui{position:fixed;left:8px;top:8px;display:flex;gap:8px;z-index:9}
+  .btn{border:1px solid #2a3a58;background:#0f1522;color:#eaf2ff;border-radius:10px;padding:8px 10px}
+  .dbg{position:fixed;right:8px;top:8px;background:#0f1522cc;border:1px solid #22324d;border-radius:8px;
+       padding:8px 10px;color:#cfe3ff;font:12px/1.3 system-ui;z-index:8;max-width:46ch}
 </style>
 </head>
 <body>
 <div class="ui">
-  <button id="btnStart" class="btn">📷 Abrir cámara</button>
+  <button id="btnStart" class="btn" type="button">📷 Abrir cámara</button>
+  <button id="btnAudio" class="btn" type="button" disabled>⏯ Audio</button>
 </div>
-<div id="log" class="log">Listo…</div>
+<div id="dbg" class="dbg">Cargando…</div>
 
-<a-scene id="scene" embedded vr-mode-ui="enabled:false" loading-screen="enabled:false"
-  mindar-image="autoStart:false; uiLoading: yes; maxTrack:1;"
-  renderer="alpha:true;antialias:true">
-  <a-camera look-controls="enabled:false"></a-camera>
-  <a-entity id="anchors"></a-entity>
+<a-scene id="scene"
+  embedded vr-mode-ui="enabled:false" device-orientation-permission-ui="enabled:true"
+  renderer="alpha:true;antialias:true;logarithmicDepthBuffer:true"
+  loading-screen="enabled:false"
+  mindar-image="uiLoading: yes; autoStart:false; maxTrack:1;"
+  style="width:100vw;height:100vh">
+
+  <a-assets timeout="60000" id="assets">
+    <video id="v1" playsinline webkit-playsinline muted autoplay loop preload="auto" crossorigin="anonymous"></video>
+  </a-assets>
+
+  <a-camera id="cam" look-controls="enabled:false">
+    <a-entity cursor="rayOrigin: mouse" raycaster="objects: .ui3d; far: 3"></a-entity>
+  </a-camera>
+
+  <a-entity id="anchor" mindar-image-target="targetIndex:0"></a-entity>
 </a-scene>
 
 <script>
-(function(){
+(async function(){
   const qs = new URLSearchParams(location.search);
-  const t = qs.get('t') || '';
-  const n = Math.max(1, +(qs.get('n')||12));
-  const warm = qs.get('warmup') ?? '2';
-  const cf   = qs.get('cf') ?? '0.0001';
-  const beta = qs.get('beta') ?? '0.001';
-
-  const logEl = document.getElementById('log');
-  const btnStart = document.getElementById('btnStart');
+  const dbg = document.getElementById('dbg');
   const scene = document.getElementById('scene');
-  const anchorsHolder = document.getElementById('anchors');
+  const anchor = document.getElementById('anchor');
+  const v1 = document.getElementById('v1');
+  const btnStart = document.getElementById('btnStart');
+  const btnAudio = document.getElementById('btnAudio');
 
-  function say(m){ logEl.textContent = m; console.log('[TEST]', m); }
+  const say = (m)=>{ dbg.textContent = m; console.log('[AR]', m); };
 
-  if(!t){ say('❗ Falta ?t=URL_DEL_MIND'); return; }
+  // ====== 1) CARGA JSON ======
+  const cfgUrl = qs.get('cfg');
+  if(!cfgUrl){ say('❗ Falta ?cfg=URL_DEL_JSON'); return; }
 
-  // Estilo cover del vídeo de la cámara
-  new MutationObserver(()=>{
-    document.querySelectorAll('video').forEach(v=>{
-      if(v.srcObject instanceof MediaStream){
-        Object.assign(v.style,{
-          objectFit:'cover', position:'fixed', inset:'0',
-          width:'100vw', height:'100vh', zIndex:'0', background:'#000'
-        });
-      }
-    });
-  }).observe(document.documentElement,{subtree:true,childList:true});
-
-  // Anchors 0..n-1 con plano verde
-  for(let i=0;i<n;i++){
-    const a=document.createElement('a-entity');
-    a.setAttribute('mindar-image-target', `targetIndex:${i}`);
-    const p=document.createElement('a-plane');
-    p.setAttribute('width',0.6); p.setAttribute('height',0.4);
-    p.setAttribute('material','color:#00ff88; opacity:.45; side:double');
-    a.appendChild(p);
-    anchorsHolder.appendChild(a);
-    a.addEventListener('targetFound', ()=>say('✅ FOUND idx '+i));
-    a.addEventListener('targetLost',  ()=>say('…lost idx '+i));
+  let CFG = null;
+  try{
+    const r = await fetch(cfgUrl, {mode:'cors', cache:'no-store'});
+    if(!r.ok) throw new Error('HTTP '+r.status);
+    CFG = await r.json();
+    say('CFG OK');
+  }catch(e){
+    say('❗ No pude cargar el JSON de cfg: '+(e.message||e));
+    return;
   }
 
-  // Configurar MindAR con parámetros “relajados”
-  scene.setAttribute(
-    'mindar-image',
-    `autoStart:false; imageTargetSrc:${t}; uiLoading: yes; maxTrack:1; warmupTolerance:${warm}; filterMinCF:${cf}; filterBeta:${beta};`
+  // Permitir forzar target por query (?t=...) para pruebas
+  if(qs.get('t')) CFG.target = qs.get('t');
+
+  // Validación mínima
+  function need(obj, key){ if(!obj || obj[key]==null){ throw new Error('cfg.'+key+' ausente'); } }
+  try{
+    need(CFG,'target'); need(CFG,'video');
+    need(CFG,'slotVid'); need(CFG,'slotTitle'); need(CFG,'slotArtist'); need(CFG,'slotBar');
+  }catch(e){ say('❗ JSON incompleto: '+e.message); return; }
+
+  const PW = CFG.pw || 2481, PH = CFG.ph || 3508, H = PH/PW;
+  const px2=(x,y,w,h)=>({wn:w/PW, hn:h/PW, cx:-0.5+(x+w/2)/PW, cy:H/2-(y+h/2)/PW});
+
+  // ====== 2) PRE-CHECK DEL .MIND ======
+  try{
+    const r = await fetch(CFG.target, {mode:'cors', cache:'no-store'});
+    if(!r.ok) throw new Error('HTTP '+r.status);
+    say('Target OK ('+r.status+')');
+  }catch(e){
+    say('❗ No pude descargar el .mind: '+(e.message||e));
+    return;
+  }
+
+  // ====== 3) CONFIGURAR MINDAR ======
+  // Parámetros “relajados” para facilitar la detección inicial:
+  scene.setAttribute('mindar-image',
+    `autoStart:false; uiLoading: yes; imageTargetSrc:${CFG.target}; maxTrack:1; warmupTolerance:2; filterMinCF:0.0001; filterBeta:0.001;`
   );
 
-  scene.addEventListener('arReady', ()=>say('AR listo (permisos OK)'));
-  scene.addEventListener('arError', (e)=>say('❗ Error AR/cámara: '+(e?.detail||'')));
-
-  async function ensurePermission(){
-    try{
-      const s = await navigator.mediaDevices.getUserMedia({
-        video:{facingMode:{ideal:'environment'}}, audio:false
-      });
-      s.getTracks().forEach(t=>t.stop());
-      return true;
-    }catch(err){
-      say('❗ Permiso cámara denegado: '+(err?.name||err));
-      return false;
+  // Cubrir cámara
+  new MutationObserver(()=>{ document.querySelectorAll('video').forEach(v=>{
+    if(v.srcObject instanceof MediaStream){
+      Object.assign(v.style,{objectFit:'cover',position:'fixed',inset:'0',width:'100vw',height:'100vh',zIndex:'0',background:'#000'});
     }
+  });}).observe(document.documentElement,{subtree:true,childList:true});
+
+  // ====== 4) CONTENIDO BÁSICO (vídeo + overlay canvas para textos/barra) ======
+  v1.src = CFG.video;
+  const vslot = CFG.slotVid;
+  const u = px2(vslot.x,vslot.y,vslot.w,vslot.h);
+
+  const vPlane=document.createElement('a-plane');
+  vPlane.setAttribute('width',u.wn); vPlane.setAttribute('height',u.hn);
+  vPlane.setAttribute('position',`${u.cx} ${u.cy} 0.10`);
+  vPlane.setAttribute('material','shader:flat; src:#v1; side:double; depthTest:true; opacity:1');
+  anchor.appendChild(vPlane);
+
+  function setCover(){
+    const mesh=vPlane.getObject3D('mesh'); if(!mesh||!mesh.material||!mesh.material.map||!v1.videoWidth) return;
+    const tex=mesh.material.map, vr=v1.videoWidth/v1.videoHeight, rr=vslot.w/vslot.h;
+    let rx=1,ry=1,ox=0,oy=0;
+    if(vr>rr){ rx=rr/vr; ry=1; ox=(1-rx)/2; } else { rx=1; ry=vr/rr; oy=(1-ry)/2; }
+    tex.offset.set(ox,oy); tex.repeat.set(rx,ry); tex.needsUpdate=true; mesh.material.needsUpdate=true;
+  }
+  vPlane.addEventListener('materialtextureloaded', setCover);
+  v1.addEventListener('loadedmetadata', ()=>{ v1.play().catch(()=>{}); setCover(); }, {once:true});
+
+  // Overlay canvas (textos + barra). Mantengo simple para aislar problemas de detección.
+  const Cw=2048, Ch=Math.round(Cw*H);
+  const canvas=document.createElement('canvas'); canvas.width=Cw; canvas.height=Ch;
+  const ctx=canvas.getContext('2d');
+
+  const overlayP=document.createElement('a-plane');
+  overlayP.setAttribute('width',1); overlayP.setAttribute('height',H);
+  overlayP.setAttribute('position','0 0 0.02');
+  overlayP.setAttribute('material','shader:flat; transparent:true; side:double; depthTest:false; opacity:1');
+  anchor.appendChild(overlayP);
+
+  overlayP.addEventListener('loaded', ()=>{
+    const tex=new AFRAME.THREE.CanvasTexture(canvas);
+    tex.needsUpdate=true;
+    const mesh=overlayP.getObject3D('mesh');
+    mesh.material.map=tex; mesh.material.needsUpdate=true;
+    overlayP.__tex=tex;
+  });
+
+  function fitFont(text, wpx, hpx, weight){
+    let lo=12, hi=Math.floor(hpx*0.92), best=Math.floor(hpx*0.74);
+    while(lo<=hi){ const mid=(lo+hi>>1); ctx.font=`${weight||700} ${mid}px system-ui,Segoe UI,Roboto`;
+      if(ctx.measureText(text).width <= wpx*0.94){ best=mid; lo=mid+1; } else hi=mid-1; }
+    return best;
+  }
+  const titlePx = fitFont(CFG.title||'', (CFG.slotTitle.w*Cw)/PW, (CFG.slotTitle.h*Ch)/PH, 800);
+  const artistPx= fitFont(CFG.artist||'',(CFG.slotArtist.w*Cw)/PW,(CFG.slotArtist.h*Ch)/PH, 600);
+
+  function mmss(t){ if(!isFinite(t)||t<0) t=0; const m=Math.floor(t/60), s=Math.floor(t%60); return `${m}:${s.toString().padStart(2,'0')}`; }
+
+  let audio=null, acx=null, analyser=null;
+  function setupAudio(){
+    if(audio) return;
+    audio = new Audio(CFG.audio||''); audio.crossOrigin='anonymous'; audio.preload='auto';
+    try{
+      const AC=window.AudioContext||window.webkitAudioContext;
+      acx=new AC(); analyser=acx.createAnalyser(); analyser.fftSize=64;
+      const src=acx.createMediaElementSource(audio); src.connect(analyser); analyser.connect(acx.destination);
+    }catch(e){}
   }
 
+  btnAudio.onclick = async()=>{
+    try{
+      setupAudio();
+      if(audio.paused){ if(acx && acx.state==='suspended') await acx.resume(); await audio.play(); btnAudio.textContent='⏸ Audio'; }
+      else{ audio.pause(); btnAudio.textContent='▶️ Audio'; }
+    }catch(e){}
+  };
+
+  // Dibujado muy básico (título/autor + barra)
+  function draw(){
+    ctx.clearRect(0,0,Cw,Ch);
+
+    // Título
+    const tS=CFG.slotTitle; const tx=Math.round(tS.x*Cw/PW), ty=Math.round(tS.y*Ch/PH), tw=Math.round(tS.w*Cw/PW), th=Math.round(tS.h*Ch/PH);
+    ctx.textAlign='center'; ctx.textBaseline='middle'; ctx.font=`800 ${titlePx}px system-ui,Segoe UI,Roboto`;
+    ctx.fillStyle='rgba(0,0,0,.25)'; ctx.fillText(CFG.title||'', tx+tw/2+2, ty+th/2+2);
+    ctx.fillStyle=(CFG.colors?.title||'#000'); ctx.fillText(CFG.title||'', tx+tw/2, ty+th/2);
+
+    // Artista
+    const aS=CFG.slotArtist; const ax=Math.round(aS.x*Cw/PW), ay=Math.round(aS.y*Ch/PH), aw=Math.round(aS.w*Cw/PW), ah=Math.round(aS.h*Ch/PH);
+    ctx.font=`600 ${artistPx}px system-ui,Segoe UI,Roboto`;
+    ctx.fillStyle='rgba(0,0,0,.18)'; ctx.fillText(CFG.artist||'', ax+aw/2+1.8, ay+ah/2+1.8);
+    ctx.fillStyle=(CFG.colors?.artist||'#000'); ctx.fillText(CFG.artist||'', ax+aw/2, ay+ah/2);
+
+    // Barra
+    const bS=CFG.slotBar; const pbx=Math.round(bS.x*Cw/PW), pby=Math.round(bS.y*Ch/PH), pbw=Math.round(bS.w*Cw/PW), pbh=Math.max(2,Math.round(bS.h*Ch/PH));
+    ctx.fillStyle='#000'; ctx.fillRect(pbx,pby,pbw,pbh);
+    let p=0, cur='0:00', dur='0:00'; if(audio && audio.duration>0){ p=audio.currentTime/audio.duration; cur=mmss(audio.currentTime); dur=mmss(audio.duration); }
+    const fw=Math.max(2,Math.floor(pbw*p)); const grad=ctx.createLinearGradient(pbx,0,pbx+fw,0);
+    grad.addColorStop(0,(CFG.colors?.wave1||'#13d77a')); grad.addColorStop(1,(CFG.colors?.wave2||'#ffd54a'));
+    ctx.fillStyle=grad; ctx.fillRect(pbx,pby,fw,pbh);
+    const kx=pbx+fw, ky=pby+pbh/2, r=Math.max(3,Math.round(pbh*0.9/2)); ctx.beginPath(); ctx.arc(kx,ky,r,0,Math.PI*2); ctx.fillStyle='#000'; ctx.fill();
+
+    // tiempos
+    ctx.fillStyle='#000'; ctx.textAlign='left'; ctx.textBaseline='alphabetic';
+    ctx.font=`700 ${Math.round(28*Cw/2048)}px system-ui,Segoe UI,Roboto`;
+    ctx.fillText(cur, pbx, pby-10); ctx.textAlign='right'; ctx.fillText(dur, pbx+pbw, pby-10);
+
+    if(overlayP.__tex){ overlayP.__tex.needsUpdate = true; }
+    requestAnimationFrame(draw);
+  }
+  requestAnimationFrame(draw);
+
+  // ====== 5) ARRANQUE / ESTADOS ======
   async function startMindAR(){
-    const sys = scene.systems && scene.systems['mindar-image-system'];
-    const comp= scene.components && scene.components['mindar-image'];
+    const sys=scene.systems && scene.systems['mindar-image-system'];
+    const comp=scene.components && scene.components['mindar-image'];
     if(sys && sys.start) return sys.start();
     if(comp && comp.start) return comp.start();
     throw new Error('MindAR no disponible');
   }
 
-  async function start(){
+  btnStart.onclick = async ()=>{
     btnStart.disabled = true;
-    say('Comprobando .mind…');
     try{
-      const r = await fetch(t, {mode:'cors', cache:'no-store'});
-      if(!r.ok) throw new Error('HTTP '+r.status);
-      say('OK .mind ('+r.status+')');
-    }catch(e){
-      say('❗ No pude descargar el .mind: '+(e.message||e));
-      btnStart.disabled=false;
-      return;
-    }
-
-    try{
-      say('Iniciando AR…');
+      say('Iniciando cámara/AR…');
       await startMindAR();
       say('Cámara lista. Apunta al póster.');
-    }catch(e1){
-      say('Pidiendo permisos de cámara…');
-      const ok = await ensurePermission();
-      if(!ok){ btnStart.disabled=false; return; }
+    }catch(e){
+      say('Pidiendo permisos…');
       try{
-        say('Iniciando AR…');
+        const s = await navigator.mediaDevices.getUserMedia({video:{facingMode:{ideal:'environment'}}, audio:false});
+        s.getTracks().forEach(t=>t.stop());
         await startMindAR();
         say('Cámara lista. Apunta al póster.');
-      }catch(e2){
-        say('❗ No se pudo iniciar MindAR: '+(e2?.name||e2));
+      }catch(err){
+        say('❗ No se pudo abrir cámara: '+(err?.message||err));
         btnStart.disabled=false;
       }
     }
-  }
+  };
 
-  btnStart.addEventListener('click', start, {passive:true});
+  // Audio SOLO cuando detecta (si autoplayOnFound !== false)
+  const autoplayOnFound = CFG.autoplayOnFound !== false;
+
+  anchor.addEventListener('targetFound', async ()=>{
+    say('✅ Target FOUND');
+    btnAudio.disabled = false;
+    v1.play().catch(()=>{});
+    if(autoplayOnFound){
+      try{
+        setupAudio();
+        if(acx && acx.state==='suspended') await acx.resume();
+        await audio.play();
+        btnAudio.textContent='⏸ Audio';
+      }catch(e){ /* si el navegador bloquea, que use el botón */ }
+    }
+  });
+
+  anchor.addEventListener('targetLost', ()=>{
+    say('…target lost');
+    v1.pause(); if(audio){ audio.pause(); btnAudio.textContent='▶️ Audio'; }
+    btnAudio.disabled = false; // que pueda reanudar al volver a encontrar
+  });
+
+  // “Primer toque” autoinicio
   window.addEventListener('pointerup', ()=>btnStart.click(), {once:true, passive:true});
 })();
 </script>
